--- a/I-Nex-DBE/.src/FMain.form
+++ b/I-Nex-DBE/.src/FMain.form
@@ -1,19 +1,43 @@
 # Gambas Form File 3.0
 
 { Form Form
-  MoveScaled(0,0,115,64)
+  MoveScaled(0,0,152,65)
   { !ListView1 ListView
-    MoveScaled(0,0,57,58)
+    MoveScaled(0,0,44,54)
     #Public = True
+    Border = False
   }
   { ButtonBox1 ButtonBox
-    MoveScaled(1,59,113,4)
+    MoveScaled(15,60,42,4)
   }
   { FileProperties1 FileProperties
-    MoveScaled(58,1,56,44)
+    MoveScaled(103,1,39,44)
   }
   { ValueBox1 ValueBox
-    MoveScaled(58,46,24,4)
+    MoveScaled(83,55,24,4)
     ReadOnly = True
+  }
+  { Label1 Label
+    MoveScaled(1,60,14,4)
+    Font = Font["Bold"]
+    Text = ("Load JSON File: ")
+  }
+  { ButtonBox2 ButtonBox
+    MoveScaled(19,55,38,4)
+  }
+  { Label2 Label
+    MoveScaled(1,55,18,4)
+    Font = Font["Bold"]
+    Text = ("Set Logos directory: ")
+  }
+  { ProgressBar1 ProgressBar
+    MoveScaled(58,60,56,4)
+  }
+  { ValueBox2 ValueBox
+    MoveScaled(58,55,24,4)
+  }
+  { ListView2 ListView
+    MoveScaled(44,0,23,54)
+    Border = False
   }
 }
