--- a/I-Nex-DBE/.src/FMain.form
+++ b/I-Nex-DBE/.src/FMain.form
@@ -3,7 +3,7 @@
 { Form Form
   MoveScaled(0,0,152,65)
   { !ListView1 ListView
-    MoveScaled(0,0,44,54)
+    MoveScaled(0,0,31,54)
     #Public = True
     Border = False
   }
@@ -11,7 +11,7 @@
     MoveScaled(15,60,42,4)
   }
   { FileProperties1 FileProperties
-    MoveScaled(103,1,39,44)
+    MoveScaled(109,1,39,44)
   }
   { ValueBox1 ValueBox
     MoveScaled(83,55,24,4)
@@ -37,7 +37,15 @@
     MoveScaled(58,55,24,4)
   }
   { ListView2 ListView
-    MoveScaled(44,0,23,54)
+    MoveScaled(31,0,36,54)
     Border = False
+  }
+  { Label3 Label
+    MoveScaled(70,4,36,4)
+    Font = Font["Bold"]
+  }
+  { TextBox1 TextBox
+    MoveScaled(69,9,24,4)
+    ReadOnly = True
   }
 }
